--- a/pages/agencyDetail/agencyDetail.wxml
+++ b/pages/agencyDetail/agencyDetail.wxml
@@ -13,15 +13,15 @@
       </view>
     </view>
   
-  <view wx:if="{{agency.logoImagePath}}" style="background: #fff; margin: 0 0 10px 0; padding: 40rpx;">
+  <!-- <view wx:if="{{agency.logoImagePath}}" style="background: #fff; margin: 0 0 10px 0; padding: 40rpx;">
     <text style="margin: 0 0 10px; font-size: 28rpx; color: #000;">老板微信</text>
     <image style="width: 600rpx; height: 600rpx; margin-left: 35rpx;" src='{{agency.logoImagePath}}'></image>
-  </view>
-  <view style="background: #fff; margin: 0 0 10px 0; padding: 40rpx;">
+  </view> -->
+  <!-- <view style="background: #fff; margin: 0 0 10px 0; padding: 40rpx;">
     <view style="margin: 0 0 10px; font-size: 28rpx; color: #000;">经营许可证</view>
     <image style="width: 600rpx; height: 600rpx; margin-left: 35rpx;" src='{{agency.licence1ImagePath}}'></image>
     <image style="width: 600rpx; height: 600rpx; margin-left: 35rpx;" src='{{agency.licence2ImagePath}}'></image>
-  </view>
+  </view> -->
 
   <view style="background: #fff; margin: 0 0 10px 0; padding: 40rpx;">
     <text style="margin: 0 0 10px; font-size: 28rpx; color: #000;">点击图中小程序码进行识别,即可进入门店</text>
