--- a/pages/contactUs/contactUs.wxml
+++ b/pages/contactUs/contactUs.wxml
@@ -1,3 +1,4 @@
 <view>
-  <button open-type="contact" style='top:50px;'>联系我们</button>
+  <button style='top:50px;' bindtap='makePhoneCall'>电话客服</button>
+  <button open-type="contact" style='top:150px;'>在线客服</button>
 </view>
