--- a/pages/agencySignin/agencySignin.wxml
+++ b/pages/agencySignin/agencySignin.wxml
@@ -6,6 +6,10 @@
           <text class='label'>商家名称</text>
           <input name="agencyName" placeholder="商家名称"></input>
         </view>
+        <view class='form-item'>
+            <text class='label'>联系人</text> 
+            <input name="contactName" placeholder="联系人姓名"></input>
+        </view>
         <view class='form-item' style="padding-right: 60rpx;">
           <text class='label'>详细地址</text>
           <input name="addressDetail" value='{{addressDetail}}'></input>
@@ -36,10 +40,10 @@
             </block>
           </view>
         </view>
-        <view class='form-item'>
+        <!-- <view class='form-item'>
           <text class='label'>服务工号</text>
           <input name="serviceNumber"></input>
-        </view>
+        </view> -->
         <view class='form-item' style="float: left; width: 40%; margin: 0 5%; border-bottom: none;">
           <text class='label' style="width: 100%; text-align: center;">代理商logo</text>
           <view style="width: 100px; height: 100px; padding: 40px 0 20px;" bindtap='chooseLogoImage'>
@@ -82,6 +86,7 @@
             </label>
           </radio-group>
         </view>
+        <view bindtap='showDialog' style="font-size: 24rpx; color: #000; font-weight:bold; margin: 10px 0 0;"><image style="width: 30rpx; height: 30rpx; float:left; margin: 2px 3px 0 0;" src="{{wenImage}}"></image>发布须知</view>
         <button form-type='submit'>申请入驻</button>
       </form>
     </view>
