--- a/pages/favorite/favorite.wxss
+++ b/pages/favorite/favorite.wxss
@@ -1,1 +1,510 @@
-/* pages/favorite/favorite.wxss */
+/**index.wxss**/
+
+
+
+.container_index {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  margin: 0 -40rpx;
+}
+
+.exceptProduct {
+  display: flex;
+  flex-direction: column;
+}
+
+.header {
+  display: flex;
+  height: 120rpx;
+  top: 10rpx;
+}
+
+.location {
+  display: flex;
+  position: flex;
+  margin-left: 40rpx;
+  align-self: center;
+}
+
+.location-text {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  margin-top: 10rpx;
+  white-space: nowrap;
+  font-size: 30rpx;
+  color: black;
+  font-family: Microsoft YaHei;
+}
+
+.location-pull {
+  height: 30rpx;
+  width: 30rpx;
+  margin: 15rpx 10rpx;
+}
+
+.search {
+  display: flex;
+  width: 90%;
+  justify-content: center;
+  align-self: center;
+  margin-top: 10rpx;
+  margin-bottom: 2rpx;
+  margin-right: 40rpx;
+  background-color: white;
+  border: 0rpx solid #000;
+  border-radius: 50rpx;
+}
+
+.searchcion {
+  align-items: center;
+  display: flex;
+}
+
+.searchInput {
+  display: flex;
+  align-self: center;
+  width: 200rpx;
+}
+
+.searchInputText {
+  font-size: 30rpx;
+}
+
+.swiper-view {
+  display: flex;
+  justify-content: center;
+  height: 430rpx;
+  width: 100%;
+}
+
+.u-wrp-bnr {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  background: #f0f0f0;
+}
+
+.swiper-item {
+  width: 100%;
+  height: 100%;
+}
+
+.u-img-slide {
+  display: flex;
+  width: 100%;
+  height: 100%;
+}
+
+.u-text-slide {
+  display: flex;
+  margin-top: 16rpx;
+  justify-content: center;
+  font-size: 30rpx;
+  margin-bottom: -6rpx;
+}
+
+.flexRowContainer {
+  display: flex;
+  flex-direction: row;
+  padding: 0 26rpx;
+}
+
+.flexRowSon {
+  display: flex;
+  flex: 1;
+  justify-content: center;
+}
+
+.tabs {
+  display: flex;
+  flex-direction: row;
+  padding: 1px 40rpx;
+  margin: 20rpx 0;
+  background: #fff;
+  border-bottom: 1px solid #dedede;
+}
+
+.tab-item {
+  text-align: center;
+  padding: 8px 0;
+}
+
+.active {
+  border-bottom: 2px solid red;
+  color: red;
+}
+
+.tab-view {
+
+}
+
+.tabs-scroll-view {
+  margin-left: 5rpx;
+  width: 75%;
+  white-space: nowrap;
+  display: inline-block;
+}
+
+.tabs-scroll-view view{
+width:128rpx;
+display: inline-block; 
+}
+
+.products {
+  display: flex;
+  flex-wrap: wrap;
+  background: #fff;
+  padding: 40rpx 0;
+}
+
+.product-item {
+  width: 315rpx;
+  margin: 0 0 20rpx 40rpx;
+}
+
+.product-item .name {
+  font-size: 26rpx;
+  color: #434343;
+  margin: 10rpx 10rpx 0 0;
+  padding: 0;
+  background: none;
+  font-weight: bold;
+}
+
+.product-item .content {
+  color: #999;
+  margin: 0 0 10rpx 0;
+  font-weight: normal;
+}
+.reflesh{
+  text-align: center;
+  margin: 20rpx auto;
+  color: #0097fe;
+  border-radius: 30px;
+  border: 1px solid #0097fe;
+  padding: 2px 15px;
+}
+
+.content {
+  display: flex;
+  flex-direction: column;
+}
+
+.content-item {
+  display: flex;
+  flex-direction: column;
+  border-bottom: 1rpx solid #dedede;
+  margin: 0 40rpx;
+  padding: 20rpx 0;
+}
+
+.content-item .name {
+  display: flex;
+  float: left;
+  font-size: 28rpx;
+  font-weight: bold;
+  padding: 0;
+  background: none;
+}
+
+.content-item .content {
+  display: flex;
+  color: #999;
+}
+
+.content-item .images {
+  display: flex;
+  flex-direction: row;
+  margin-top: 5rpx;
+}
+
+.content-item .image {
+  border: 1rpx solid #000;
+  height: 100rpx;
+  width: 100rpx;
+  display: flex;
+  margin-left: 5rpx;
+}
+
+.product-item .image {
+  border: 1rpx solid #dedede;
+  height: 315rpx;
+  width: 315rpx;
+  display: block;
+}
+
+.agencylist{
+  background: #fff;
+  margin: 10px 20px;
+  padding: 10px 55px 10px 10px;
+  overflow: hidden;
+  position: relative;
+  border-bottom: 1px solid #dedede;
+  font-size: 28rpx;
+}
+.agencylist .itemimage{
+  float: left;
+  width: 100rpx;
+  height: 100rpx;
+  border-radius: 10rpx;
+  margin: 0 10px 0 0;
+  box-shadow: 0 0 3px #dedede;
+}
+.agencylist .name{
+  display: block;
+}
+.agencylist .address{
+  display: block;
+  color:#999;
+}
+.agencylist .phone{
+  width:36px;
+  height: 36px;
+  position: absolute;
+  top:17px;
+  right: 10px;
+}
+
+
+.authheader {
+    margin: 90rpx 0 90rpx 50rpx;
+    border-bottom: 1px solid #ccc;
+    text-align: center;
+    width: 650rpx;
+    height: 300rpx;
+    line-height: 450rpx;
+}
+ 
+.authheader image {
+    width: 200rpx;
+    height: 200rpx;
+}
+ 
+.authcontent {
+    margin-left: 50rpx;
+    margin-bottom: 90rpx;
+}
+ 
+.authcontent text {
+    display: block;
+    color: #9d9d9d;
+    margin-top: 40rpx;
+}
+ 
+
+.authbottom {
+    border-radius: 80rpx;
+    margin: 70rpx 50rpx;
+    font-size: 35rpx;
+}
+
+
+.bar-bottom {
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    z-index: 999;
+    width: 100%;
+    box-shadow: 0 0 3rpx rgba(0,0,0,.2);
+    height: 110rpx;
+}
+
+.bar-bottom-btn {
+    border: none;
+    background: #fff;
+    font-size: 0;
+    line-height: normal;
+    padding: 0;
+    margin: 0;
+    box-shadow: none;
+    border-radius: 0;
+    position: inherit;
+    border-left: 1rpx solid #e3e3e3;
+    width: 110rpx;
+}
+
+.bar-bottom-btn:after {
+    display: none;
+}
+
+.bar-bottom-btn:first-child {
+    border-left: none;
+}
+
+.bar-bottom-btn.button-hover {
+    background: rgba(255,255,255,.85);
+}
+
+.bar-bottom-btn view {
+    text-align: center;
+    width: 100%;
+}
+
+.bar-bottom-btn image {
+    width: 38rpx;
+    height: 38rpx;
+    margin-bottom: 0rpx;
+}
+
+.bar-bottom-btn text {
+    font-size: 8pt;
+    color: #888;
+    display: block;
+}
+
+.bar-bottom .add-cart {
+    background: #f39800;
+    color: #fff;
+}
+
+.bar-bottom .buy-now {
+    background: #ff4544;
+    color: #fff;
+}
+
+.flex {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: flex;
+}
+
+.flex-row {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: flex;
+    -webkit-box-orient: horizontal;
+    flex-direction: row;
+}
+
+.flex-col {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: flex;
+    -webkit-box-orient: vertical;
+    flex-direction: column;
+}
+
+.flex-grow-0 {
+    min-width: 0;
+    -webkit-box-flex: 0;
+    -ms-flex-positive: 0;
+    flex-grow: 0;
+    -ms-flex-negative: 0;
+    flex-shrink: 0;
+}
+
+.flex-grow-1 {
+    min-width: 0;
+    -webkit-box-flex: 1;
+    -ms-flex-positive: 1;
+    flex-grow: 1;
+    -ms-flex-negative: 1;
+    flex-shrink: 1;
+}
+
+.flex-x-center {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: flex;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+    justify-content: center;
+}
+
+.flex-y-center {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: flex;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    -ms-grid-row-align: center;
+    align-items: center;
+}
+
+.flex-y-bottom {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: flex;
+    -webkit-box-align: end;
+    -ms-flex-align: end;
+    -ms-grid-row-align: flex-end;
+    align-items: flex-end;
+}
+
+.tab-bar {
+    background: #fff;
+    border-top: 1rpx solid #e3e3e3;
+    border-bottom: 1rpx solid #e3e3e3;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    z-index: 10;
+    height: 100rpx;
+}
+
+.tab-bar .tab-name {
+    display: inline-block;
+    padding: 24rpx 32rpx;
+    border-bottom: 2rpx solid transparent;
+    height: 53rpx;
+}
+
+.tab-bar .tab-name.active {
+    border-color: #ff4544;
+    color: #ff4544;
+}
+
+.w-100 {
+    width: 100%;
+}
+
+.h-100 {
+    height: 100%;
+}
+
+.wh-100 {
+    width: 100%;
+    height: 100%;
+}
+
+.goods-list {
+    padding-top: 5rpx;
+}
+
+.goods-item {
+    width: 365rpx;
+    display: inline-block;
+    position: relative;
+    margin: 0 5rpx;
+    margin-bottom: 10rpx;
+    font-size: 0;
+    background: #fff;
+}
+
+.goods-item .goods-pic {
+    width: 100%;
+    height: 365rpx;
+}
+
+.goods-item .goods-info {
+    padding: 5rpx 0;
+}
+
+.goods-item .goods-name {
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    padding: 10rpx;
+    font-size: 11pt;
+    display: block;
+    text-align: center;
+}
+
+.goods-item .goods-price {
+    font-size: 11pt;
+    color: #f40;
+    display: block;
+    text-align: center;
+}
