--- a/pages/goodsDetail/goodsDetail.wxml
+++ b/pages/goodsDetail/goodsDetail.wxml
@@ -1,9 +1,9 @@
 <view style="position: relative; padding-bottom: 50px;">
 <!-- 头部 -->
   <view style="background: #fff; margin: 0 -40rpx 10px -40rpx; padding: 20rpx 40rpx;">
-    <view class="title">{{goodsName}}</view>
-    <view class="price">￥1.00</view>
-    <view class="rest">剩余：6</view>
+    <view class="title">{{goods.goodsName}}</view>
+    <view class="price">￥{{goods.price}}</view>
+    <view class="rest">剩余：{{goods.stock}}</view>
   </view>
   <view style="background: #fff; margin: 0 -40rpx 10px -40rpx; padding: 20rpx 40rpx;">
     <view class="section-title">商品描述</view>
