--- a/pages/addGoods/addGoods.wxml
+++ b/pages/addGoods/addGoods.wxml
@@ -4,16 +4,34 @@
     <view class='form'>
       <form bindsubmit="formSubmit" report-submit='true'>
         <view class='form-item'>
-        <text class='label'>一级分类</text> 
+        <text class='label'>平台分类</text> 
           <picker bindchange="bindPickerChange1" value="{{index1}}" range="{{oneLevelCategorys}}" range-key='text' style="padding: 0 0 0 66px; line-height: 80rpx;">
           <text name="oneLevelCategory">{{oneLevelCategory?oneLevelCategorys[index1].text:"--请选择--"}}</text>
           </picker>
         </view>
+        <view class='the-label' wx:if="{{platformCategoryFlag}}">
+          <view class='list'>
+            <block wx:for="{{secondLevelCategorys}}" wx:key="">
+              <view class="li {{item.checked?'cur':''}}" data-index="{{index}}" data-value="{{item.id}}" bindtap="checkLabs1">
+                <label class='ti' name="secondLevelCategory">{{item.categoryName}}</label>
+              </view>
+            </block>
+          </view>
+        </view>
         <view class='form-item'>
-        <text class='label'>二级分类</text> 
-          <picker bindchange="bindPickerChange2" value="{{index2}}" range="{{secondLevelCategorys}}" range-key='text' style="padding: 0 0 0 66px; line-height: 80rpx;">
-          <text name="secondLevelCategory">{{secondLevelCategory?secondLevelCategorys[index2].text:"--请选择--"}}</text>
+        <text class='label'>品牌分类</text> 
+          <picker bindchange="bindPickerChange2" value="{{index2}}" range="{{brandCategorys}}" range-key='categoryName' style="padding: 0 0 0 66px; line-height: 80rpx;">
+          <text name="brandCategory">{{brandCategory?brandCategorys[index2].categoryName:"--请选择--"}}</text>
           </picker>
+        </view>
+        <view class='the-label' wx:if="{{seriesCategoryFlag}}">
+          <view class='list'>
+            <block wx:for="{{seriesCategorys}}" wx:key="">
+              <view class="li {{item.checked?'cur':''}}" data-index="{{index}}" data-value="{{item.id}}" bindtap="checkLabs2">
+                <label class='ti' name="seriesCategory">{{item.categoryName}}</label>
+              </view>
+            </block>
+          </view>
         </view>
         <view class='form-item'>
             <text class='label'>商品名称</text> 
