--- a/pages/agencyCategory/agencyCategory.wxml
+++ b/pages/agencyCategory/agencyCategory.wxml
@@ -1,32 +1,29 @@
-<view style="margin: 0 -40rpx;">
-  <view style="border-bottom: 1px solid #dedede; padding: 30rpx 0; overflow: hidden; margin: 0 0 10px; padding: 40rpx; background: #fff;">
-    <image class="itemimage" src='{{agency.logoImagePath}}'></image>
-    <text class="agencyname">{{agency.agencyName}}</text>
-  </view>
-  <view class="address">
-    <image src='{{addressImage}}'></image>{{agency.address}}
-  </view>
-  <view class="tel" bindtap='makePhoneCall' data-mobilephone='{{agency.mobilephone}}'>
-      <text>{{agency.mobilephone}}</text>
-      <view class="phone">
-        <image src='{{phoneImage2}}'></image>电话
-      </view>
-    </view>
-  
-  <!-- <view wx:if="{{agency.logoImagePath}}" style="background: #fff; margin: 0 0 10px 0; padding: 40rpx;">
-    <text style="margin: 0 0 10px; font-size: 28rpx; color: #000;">老板微信</text>
-    <image style="width: 600rpx; height: 600rpx; margin-left: 35rpx;" src='{{agency.logoImagePath}}'></image>
-  </view> -->
-  <!-- <view style="background: #fff; margin: 0 0 10px 0; padding: 40rpx;">
-    <view style="margin: 0 0 10px; font-size: 28rpx; color: #000;">经营许可证</view>
-    <image style="width: 600rpx; height: 600rpx; margin-left: 35rpx;" src='{{agency.licence1ImagePath}}'></image>
-    <image style="width: 600rpx; height: 600rpx; margin-left: 35rpx;" src='{{agency.licence2ImagePath}}'></image>
-  </view> -->
+<view class="section">
+    <!-- 左侧类型 -->
+    <scroll-view scroll-y="true" class="left">
+        <view wx:for="{{types}}" wx:key="typeId" data-id="{{item.id}}" bindtap="tapType" class="{{item.id == brandId ? 'active' : ''}}" style="font-size:33rpx">
+            {{item.categoryName}}
+        </view>
+    </scroll-view>
 
-  <view style="background: #fff; margin: 0 0 10px 0; padding: 40rpx;">
-    <text style="margin: 0 0 10px; font-size: 28rpx; color: #000;">点击图中小程序码进行识别,即可进入门店</text>
-    <image style="width: 600rpx; height: 600rpx; margin-left: 35rpx;" src='../../images/wxacode.png'></image>
-  </view>
+    <!-- 右侧数据 -->
+
+    <scroll-view scroll-y="true" class="right">
+        <!-- <view class="typeTree">
+            <view  class="brand" wx:for="{{typeTree}}" wx:for-item="data">
+                <navigator url="../listdetail/listdetail?cat_id={{data.id}}" wx:key="typeId" class="item">
+                    <image src="{{data.bz_1}}"></image>
+                    <text>{{data.name}}</text>
+                </navigator>
+            </view>
+        </view> -->
+        <view class="agencylist" wx:for="{{goodses}}" wx:key="{{item.id}}" bindtap="openGoods" data-cid="{{item.id}}">
+          <image class="itemimage" src='{{item.logoImagePath}}'></image>
+          <image class="phone" src='{{phoneImage}}'></image>
+          <text class="name">{{item.goodsName}}</text>
+          <text class="address">{{item.address}}</text>
+        </view>
+    </scroll-view>
 </view>
 
 <view class="flex-row bar-bottom">
