--- a/pages/goodsDetail/goodsDetail.wxml
+++ b/pages/goodsDetail/goodsDetail.wxml
@@ -1,12 +1,15 @@
 <view style="position: relative; padding-bottom: 50px;">
 <!-- 头部 -->
   <view style="background: #fff; margin: 0 -40rpx 10px -40rpx; padding: 20rpx 40rpx;">
-    <view class="title">{{goods.goodsName}}</view>
-    <view class="price">￥{{goods.price}}</view>
-    <view class="rest">剩余：{{goods.stock}}</view>
+  <image class="itemimage" src='{{firstPic}}'></image>
+    <view class="title">名称：{{goods.goodsName}}</view>
+    <view class="price">价格：￥{{goods.price}}</view>
+    <view class="stock">库存：{{goods.stock}}</view>
   </view>
   <view style="background: #fff; margin: 0 -40rpx 10px -40rpx; padding: 20rpx 40rpx;">
-    <view class="section-title">商品描述</view>
+    <view class="section-title">商品介绍</view>
+    <view class='description'>{{goodsDescription}}</view>
+    <view class="section-title">商品图文</view>
     <view wx:for="{{goodsPicArr}}">
       <image style="width: 600rpx; height: 600rpx; margin-left: 35rpx;" src='{{goodsPicArr[index]}}'></image>
     </view>
