--- a/pages/agencyDetail/agencyDetail.wxss
+++ b/pages/agencyDetail/agencyDetail.wxss
@@ -11,6 +11,13 @@
 	line-height: 180rpx;
 	color: #000;
 }
+.contacts{
+	font-size: 36rpx;
+	line-height: 60rpx;
+  display: flex;
+  justify-content: center;
+  color: #f39800;
+}
 .address{
 	color: #666;
 	line-height:1;
@@ -172,4 +179,49 @@
     -ms-flex-align: end;
     -ms-grid-row-align: flex-end;
     align-items: flex-end;
+}
+
+.w-100 {
+    width: 100%;
+}
+
+.h-100 {
+    height: 100%;
+}
+
+.wh-100 {
+    width: 100%;
+    height: 100%;
+}
+
+.agencylist{
+  background: #fff;
+  margin: 10px 20px;
+  padding: 10px 55px 10px 10px;
+  overflow: hidden;
+  position: relative;
+  border-bottom: 1px solid #dedede;
+  font-size: 28rpx;
+}
+.agencylist .itemimage{
+  float: left;
+  width: 100rpx;
+  height: 100rpx;
+  border-radius: 10rpx;
+  margin: 0 10px 0 0;
+  box-shadow: 0 0 3px #dedede;
+}
+.agencylist .name{
+  display: block;
+}
+.agencylist .address{
+  display: block;
+  color:#999;
+}
+.agencylist .phone{
+  width:36px;
+  height: 36px;
+  position: absolute;
+  top:17px;
+  right: 10px;
 }
