--- a/pages/myShop/myShop.wxml
+++ b/pages/myShop/myShop.wxml
@@ -1,2 +1,40 @@
-<!--pages/myShop/myShop.wxml-->
-<text>pages/myShop/myShop.wxml</text>
+<view>
+  <view class="flex-grow-0 flex-row tab-bar">
+        <view bindtap="tabSwitch" class="flex-grow-1" data-index="0" style="text-align: center">
+            <view class="tab-name {{swiper_current==0?'active':''}}">负责人列表</view>
+        </view>
+        <!-- <view bindtap="tabSwitch" class="flex-grow-1" data-index="1" style="text-align: center">
+            <view class="tab-name {{swiper_current==1?'active':''}}">收藏的店铺</view>
+        </view> -->
+    </view>
+
+  <view class="flex-grow-1 wh-100" style="position: absolute;top: 0;left: 0;z-index:0;padding-top: 100rpx">
+        <swiper bindchange="swiperChange" class="h-100" current="{{swiper_current}}" duration="300">
+            <swiper-item>
+                <scroll-view bindscrolltolower="goodsScrollBottom" class="h-100" lowerThreshold="1" scrollY="true">
+                  <view class='agencylist' wx:for="{{agencyContacts}}" wx:key="{{item.id}}" bindtap='openGoods'           data-goods-id='{{item.id}}'>
+                        <text class="name">姓名：{{item.contactName}}</text>
+                        <text class="address">电话：{{item.mobilephone}}</text>
+                        <text class="address">负责区域：{{item.area}}</text>
+                  </view>
+                </scroll-view>
+            </swiper-item>
+            
+            <swiper-item>
+                <scroll-view bindscrolltolower="topicScrollBottom" class="h-100" lowerThreshold="1" scrollY="true">
+                  <view class="agencylist" wx:for="{{favoriteAgency}}" wx:key="{{item.id}}" bindtap="openAgency" data-cid="{{item.id}}">
+                    <image class="itemimage" src='{{item.logoImagePath}}'></image>
+                    <image class="phone" src='{{phoneImage}}'></image>
+                    <text class="name">{{item.agencyName}}</text>
+                    <text class="address">{{item.address}}</text>
+                  </view>
+                </scroll-view>
+            </swiper-item>
+        </swiper>
+    </view>
+
+    <navigator openType="navigate" url="/pages/addContact/addContact?agencyId={{agencyId}}">
+      <image class='add_icon' src='../../images/发布red.png'></image>
+    </navigator>
+    
+</view>
